# Tkapp

./: README.md  pyproject.toml
main/: main.py  script.py  tkapp_feo.py
src/tkapp/: __init__.py
testingthetkapp/fullbuilds/: tkapp_feo.py  tkapp_feo_2.py
